# IIoT_MMT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
certs/: server_mmt.crt  server_mmt.key
docs/: BUILD_AND_RUN.md  CONFIGURATION.md
openssl-1.1.1u/: Makefile  configdata.pm  libcrypto.pc  libcrypto.so.1.1  libssl.pc  openssl.pc  pod2htmd.tmp
openssl-1.1.1u/crypto/: buildinf.h
openssl-1.1.1u/test/: asn1_internal_test  chacha_internal_test  cmactest  ctype_internal_test  curve448_internal_test  drbgtest  ec_internal_test  modes_internal_test  poly1305_internal_test  rdrand_sanitytest  siphash_internal_test  sm2_internal_test  sm4_internal_test  x509_internal_test
openssl-1.1.1u/tools/: c_rehash
scripts/: kem_test  kem_test.c  kem_test1.c  kem_test2.c  main_app  pqc_public.key
src/app/: main.c
src/pqc_kem/: pqc_kem.c  pqc_kem.h
